--- a/projects/angular-mydatepicker/src/lib/components/month-view/month-view.component.html
+++ b/projects/angular-mydatepicker/src/lib/components/month-view/month-view.component.html
@@ -1,4 +1,4 @@
-<table class="myDpMonthTable" [ngClass]="{'ng-myrtl': opts.rtl}">
+<table class="myDpMonthTable" [ngClass]="{'ng-myrtl': opts.rtl, 'myDpBtnsEnabled': opts.showTodayBtn}">
   <tbody>
     <tr *ngFor="let mr of months">
       <td id="m_{{m.row}}_{{m.col}}" class="m_{{m.row}}_{{m.col}} myDpMonthcell"
