Added Focus Trap for WCAG 2.1 Level AA conformance

--- a/projects/angular-mydatepicker/src/lib/components/calendar/calendar.component.html
+++ b/projects/angular-mydatepicker/src/lib/components/calendar/calendar.component.html
@@ -1,9 +1,9 @@
 <span #styleEl></span>
 <div class="ng-mydp {{opts.stylesData?.selector || ''}}">
-  <div class="myDpSelector" #selectorEl 
-    [libAngularMyDatePickerCalendar]="{inline: opts.inline, selectorWidth: opts.selectorWidth, selectorHeight: opts.selectorHeight, selectorPos: selectorPos}" 
-    [ngClass]="{'myDpSelectorArrow': opts.showSelectorArrow, 'myDpSelectorArrowLeft': opts.showSelectorArrow && !opts.alignSelectorRight, 
-      'myDpSelectorArrowRight': opts.showSelectorArrow&&opts.alignSelectorRight, 'myDpSelectorAbsolute': !opts.inline, 'myDpSelectorPosInitial': opts.inline}" 
+  <div class="myDpSelector" #selectorEl cdkTrapFocus
+    [libAngularMyDatePickerCalendar]="{inline: opts.inline, selectorWidth: opts.selectorWidth, selectorHeight: opts.selectorHeight, selectorPos: selectorPos}"
+    [ngClass]="{'myDpSelectorArrow': opts.showSelectorArrow, 'myDpSelectorArrowLeft': opts.showSelectorArrow && !opts.alignSelectorRight,
+        'myDpSelectorArrowRight': opts.showSelectorArrow&&opts.alignSelectorRight, 'myDpSelectorAbsolute': !opts.inline, 'myDpSelectorPosInitial': opts.inline}"
     (keyup)="onCloseSelector($event)" tabindex="0">
 
     <lib-selection-bar [opts]="opts" [yearsDuration]="yearsDuration" [visibleMonth]="visibleMonth" [selectMonth]="selectMonth" [selectYear]="selectYear"
